@@ -1,0 +1,8 @@
+language: android
+android:
+  components:
+- tools
+    - platform-tools
+    - tools
+    - build-tools-26.1.1
+    - android-21
