@@ -1,5 +1,7 @@
 # android-intent-cups-client
 
+[![Build Status](https://travis-ci.org/rainbru/android-intent-cups-client.svg?branch=master)](https://travis-ci.org/rainbru/android-intent-cups-client)
+
 Print from android jpeg intent filter to network cups printers
 
 This is **not** an android print service. Instead, this application
